--- a/.github/workflows/selenium-test.yml
+++ b/.github/workflows/selenium-test.yml
@@ -2,7 +2,7 @@ name: Multi-Browser Selenium Tests with Allure Report
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, staging ]
   pull_request:
     branches: [ main ]
 #  schedule:
