--- a/.github/workflows/selenium-test.yml
+++ b/.github/workflows/selenium-test.yml
@@ -5,9 +5,9 @@ on:
     branches: [ main, staging ]
   pull_request:
     branches: [ main ]
-#  schedule:
-#    # Run tests daily at 2 AM UTC
-#    - cron: '0 2 * * *'
+  schedule:
+    # Run tests weekly on Wednesday at 3 AM UTC
+    - cron: '0 3 * * 3'
 
 permissions:
   contents: write
@@ -27,12 +27,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
     - name: Cache pip dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -61,7 +61,7 @@ jobs:
 
     - name: Upload Allure results for ${{ matrix.browser }}
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: allure-results-${{ matrix.browser }}
         path: ./allure-results
@@ -84,21 +84,21 @@ jobs:
       continue-on-error: true  # Branch might not exist yet
 
     - name: Download Chrome test results
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: allure-results-chrome
         path: ./allure-results/chrome
       continue-on-error: true
 
     - name: Download Firefox test results
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: allure-results-firefox
         path: ./allure-results/firefox
       continue-on-error: true
 
     - name: Download Edge test results
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: allure-results-edge
         path: ./allure-results/edge
@@ -137,7 +137,7 @@ jobs:
         keep_reports: 20  # Keep last 20 reports
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
