feat: adding test directory pattern

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,16 @@
 [tool:pytest]
-minversion = 6.0
+# Test discovery
+python_files = test_*.py *_test.py
+python_classes = Test*
+python_functions = test_*
+
+# Test directories
+testpaths = tests/
+
+# Minimum version
+minversion = 7.0
+
+# Essential addopts
 addopts =
     --strict-markers
     --strict-config
