feat: adding allure report pattern

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,20 @@ minversion = 7.0
 
 # Essential addopts
 addopts =
+    # Allure reporting
+    --alluredir=../reports/allure-results
+    --clean-alluredir
+
+    # Verbose output
+    -v
+
+    # Show extra summary info
+    -ra
+
+    # Show slowest tests
+    --durations=5
+
+    # Strict mode for markers
     --strict-markers
     --strict-config
     --verbose
