feat: adding marker & log information

--- a/pytest.ini
+++ b/pytest.ini
@@ -27,18 +27,24 @@ addopts =
 
     # Strict mode for markers
     --strict-markers
-    --strict-config
-    --verbose
-    --html=reports/report.html
-    --self-contained-html
-    --alluredir=allure-results
-    --clean-alluredir
-testpaths = tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
+
+# Essential markers
 markers =
-    smoke: marks tests as smoke tests
-    regression: marks tests as regression tests
-    critical: marks tests as critical functionality
-    slow: marks tests as slow running
+    smoke: Smoke tests - critical functionality
+    critical: Critical path tests
+    slow: Slow running tests (> 30 seconds)
+
+# Log configuration
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# Log file
+log_file = reports/test_execution.log
+log_file_level = DEBUG
+
+# Filter warnings
+filterwarnings =
+    ignore::UserWarning
+    ignore::DeprecationWarning
